fix model, setup ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   bloc: ^8.1.2
   get_it: ^7.6.7
   intl: ^0.19.0
+  loading_animation_widget: ^1.2.0+4
+  smooth_page_indicator: ^1.1.0
+  flutter_typeahead: ^5.0.2
+  floor: ^1.4.2
+  mockito: ^5.4.4
+  bloc_test: ^9.1.5
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/nightpic.jpg
-    - assets/images/pic_bg.jpg
-  #  - images/a_dot_ham.jpeg
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
